[build-system]
requires = [
    "setuptools >= 64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-gltf"
dynamic = ["version"]
authors = [
    {name = "Mitchell Stokes"},
]
description = "glTF utilities for Panda3D"
readme = "README.md"
keywords = ["panda3d", "gltf"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "panda3d >= 1.10.8"
]
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/rayanalysis/panda3d-gltf"

[project.entry-points."panda3d.loaders"]
gltf = "gltf._loader:GltfLoader"
glb = "gltf._loader:GltfLoader"

[tool.setuptools]
packages = ["gltf"]

[tool.setuptools.dynamic]
version = {attr = "gltf.version.__version__"}
